# spiralsynthmodular

./: .gitignore  AUTHORS  CHANGES  COPYING  GraphSort.C  GraphSort.h  Makefile.in  README  SettingsWindow.C  SettingsWindow.h  SpiralSynthModular.C  SpiralSynthModular.h  SpiralSynthModular.pro  SpiralSynthModularInfo.C  SpiralSynthModularInfo.h  SpiralSynthPluginLocation.h.in  autogen.sh  configure.in  createlinks  main.cpp  test-run
Examples/: BandpassShaper.ssm  Feedback.ssm  FourOsc.ssm  Polyphonic.ssm  Random.ssm  Sequence.ssm  SpiralSynth.ssm  Tutorial1-FirstThing.ssm  Tutorial2-Audio&CVs.ssm  Tutorial3-SubtractiveSynth.ssm  Tutorial4-AdditiveSynth.ssm  Tutorial5-Matrix&Sampler.ssm  Tutorial5-MatrixSampler.ssm  Tutorial6-Sequencer.ssm  Tutorial7-LADSPA.ssm  Tutorial8-AdvSequencing.ssm  soil_and_the_crop.ssm
GUI/: SSM.xcf  SSM.xpm  SpiralIcon.xpm  comment.xpm  edit.xpm  load.xpm  new.xpm  options.xpm  save.xpm
GUI/Widgets/: Fl_Canvas.C  Fl_Canvas.h  Fl_CommentGUI.C  Fl_CommentGUI.h  Fl_DeviceGUI.C  Fl_DeviceGUI.h  Fl_DragBar.H  Fl_DragBar.cxx  Fl_DragBar.fld  PawfalInput.C  PawfalInput.h  PawfalYesNo.C  PawfalYesNo.h  SpiralGUI.C  SpiralGUI.H
SpiralSound/: ChannelHandler.C  ChannelHandler.h  Midi.C  Midi.h  NoteTable.C  NoteTable.h  PluginManager.C  PluginManager.h  RiffWav.C  RiffWav.h  Sample.C  Sample.h  SpiralInfo.C  SpiralInfo.h
SpiralSound/Plugins/: Edit.sh  SpiralPlugin.C  SpiralPlugin.h  SpiralPluginGUI.C  SpiralPluginGUI.h
SpiralSound/Plugins/AmpPlugin/: AmpPlugin.C  AmpPlugin.h  AmpPlugin.pro  AmpPluginGUI.C  AmpPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/AnotherFilterPlugin/: AnotherFilterPlugin.C  AnotherFilterPlugin.h  AnotherFilterPluginGUI.C  AnotherFilterPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/BeatMatchPlugin/: BeatMatchPlugin.C  BeatMatchPlugin.h  BeatMatchPluginGUI.C  BeatMatchPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/ComplexEnvelopePlugin/: Bezier.C  Bezier.h  ComplexEnvelopePlugin.C  ComplexEnvelopePlugin.h  ComplexEnvelopePlugin.pro  ComplexEnvelopePluginGUI.C  ComplexEnvelopePluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/ControllerPlugin/: ControllerPlugin.C  ControllerPlugin.h  ControllerPlugin.pro  ControllerPluginGUI.C  ControllerPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/CounterPlugin/: CounterPlugin.C  CounterPlugin.h  CounterPluginGUI.C  CounterPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/DelayPlugin/: DelayPlugin.C  DelayPlugin.h  DelayPlugin.pro  DelayPluginGUI.C  DelayPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/DiskWriterPlugin/: DiskWriterPlugin.C  DiskWriterPlugin.h  DiskWriterPluginGUI.C  DiskWriterPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/DistributorPlugin/: DistributorPlugin.C  DistributorPlugin.h  DistributorPlugin.pro  DistributorPluginGUI.C  DistributorPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/EchoPlugin/: EchoPlugin.C  EchoPlugin.h  EchoPlugin.pro  EchoPluginGUI.C  EchoPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/EnvFollowerPlugin/: EnvFollowerPlugin.C  EnvFollowerPlugin.h  EnvFollowerPlugin.pro  EnvFollowerPluginGUI.C  EnvFollowerPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/EnvelopePlugin/: EnvelopePlugin.C  EnvelopePlugin.h  EnvelopePlugin.pro  EnvelopePluginGUI.C  EnvelopePluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/FilterPlugin/: FilterPlugin.C  FilterPlugin.h  FilterPlugin.pro  FilterPluginGUI.C  FilterPluginGUI.h  Makefile.in  SpiralIcon.xpm  iir_filter.C  iir_filter.h
SpiralSound/Plugins/FlipflopPlugin/: FlipflopPlugin.C  FlipflopPlugin.h  FlipflopPluginGUI.C  FlipflopPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/FormantFilterPlugin/: FormantFilterPlugin.C  FormantFilterPlugin.h  FormantFilterPluginGUI.C  FormantFilterPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/GUI/: WS_InvSine.h  WS_Noise.h  WS_Pulse1.h  WS_Pulse2.h  WS_RevSaw.h  WS_Saw.h  WS_Sine.h  WS_Square.h  WS_Tri.h  WaveChooser.C  WaveChooser.h
SpiralSound/Plugins/JackPlugin/: JackPlugin.C  JackPlugin.h  JackPlugin.pro  JackPluginGUI.C  JackPluginGUI.h  Makefile.in  SpiralIcon.xpm  jack.h  port.h
SpiralSound/Plugins/JoystickPlugin/: JoystickPlugin.C  JoystickPlugin.h  JoystickPlugin.pro  JoystickPluginGUI.C  JoystickPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/KeyboardPlugin/: KeyboardPlugin.C  KeyboardPlugin.h  KeyboardPluginGUI.C  KeyboardPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/LADSPAPlugin/: LADSPAInfo.C  LADSPAInfo.h  LADSPAPlugin.C  LADSPAPlugin.h  LADSPAPlugin.pro  LADSPAPluginGUI.C  LADSPAPluginGUI.h  Makefile.in  SpiralIcon.xpm  String.cc  String.h  load.c  misc.c  search.c  utils.h
SpiralSound/Plugins/LFOPlugin/: LFOPlugin.C  LFOPlugin.h  LFOPlugin.pro  LFOPluginGUI.C  LFOPluginGUI.h  Makefile  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/LogicPlugin/: LogicPlugin.C  LogicPlugin.h  LogicPluginGUI.C  LogicPluginGUI.h  Makefile.in  SpiralIcon.xpm
SpiralSound/Plugins/MasherPlugin/: Makefile.in  MasherPlugin.C  MasherPlugin.h  MasherPluginGUI.C  MasherPluginGUI.h  SpiralIcon.xpm
SpiralSound/Plugins/MatrixPlugin/: Makefile.in  MatrixPlugin.C  MatrixPlugin.h  MatrixPlugin.pro  MatrixPluginGUI.C  MatrixPluginGUI.h  SpiralIcon.xpm
SpiralSound/Plugins/MeterPlugin/: Makefile  Makefile.in  MeterPlugin.C  MeterPlugin.h  MeterPlugin.pro  MeterPluginGUI.C  MeterPluginGUI.h  SpiralIcon.xpm
SpiralSound/Plugins/MidiPlugin/: Makefile.in  MidiPlugin.C  MidiPlugin.h  MidiPlugin.pro  MidiPluginGUI.C  MidiPluginGUI.h  SpiralIcon.xpm
SpiralSound/Plugins/MixSwitchPlugin/: Makefile.in  MixSwitchPlugin.C  MixSwitchPlugin.h  MixSwitchPluginGUI.C  MixSwitchPluginGUI.h  SpiralIcon.xpm
SpiralSound/Plugins/MixerPlugin/: Makefile.in  MixerPlugin.C  MixerPlugin.h  MixerPlugin.pro  MixerPluginGUI.C  MixerPluginGUI.h  SpiralIcon.xpm
SpiralSound/Plugins/MoogFilterPlugin/: Makefile.in  MoogFilterPlugin.C  MoogFilterPlugin.h  MoogFilterPlugin.pro  SpiralIcon.xpm  (+2 more)
(+236 files in other folders)
